--- a/New_Task_2.ipynb
+++ b/New_Task_2.ipynb
@@ -864,25 +864,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'011011': 1000}\n",
-      "{'000000': 498, '111111': 502}\n",
-      "{'000000': 517, '111111': 483}\n"
+      "{'100000': 1000}\n",
+      "{'000000': 504, '111111': 496}\n",
+      "{'000000': 481, '111111': 519}\n"
      ]
     }
    ],
    "source": [
     "# Steane's 7 bit code\n",
-    "q = QuantumRegister(13)\n",
+    "q = QuantumRegister(7)\n",
+    "a = QuantumRegister(6)\n",
     "c = ClassicalRegister(6)\n",
     "# c2 = ClassicalRegister(1)\n",
-    "qc = QuantumCircuit(q,c)\n",
+    "qc = QuantumCircuit(q,a,c)\n",
     "\n",
     "\n",
     "\n",
@@ -908,52 +909,52 @@
     "\n",
     "\n",
     "# q[3] is the main qubit, so adding some errors on it\n",
-    "qc.x(q[3])\n",
-    "qc.z(q[3])\n",
+    "qc.x(q[0])\n",
+    "# qc.z(q[3])\n",
     "\n",
     "# # Decoding  7-12\n",
-    "for i in range(7,13):\n",
-    "    qc.h(q[i])\n",
+    "for i in range(0,6):\n",
+    "    qc.h(a[i])\n",
     "\n",
-    "qc.cx(q[12], q[6])\n",
-    "qc.cx(q[12], q[4])\n",
-    "qc.cx(q[12], q[3])\n",
-    "qc.cx(q[12], q[2])\n",
+    "qc.cx(a[5], q[6])\n",
+    "qc.cx(a[5], q[4])\n",
+    "qc.cx(a[5], q[3])\n",
+    "qc.cx(a[5], q[2])\n",
     "\n",
-    "qc.cx(q[11], q[6])\n",
-    "qc.cx(q[11], q[5])\n",
-    "qc.cx(q[11], q[3])\n",
-    "qc.cx(q[11], q[1])\n",
+    "qc.cx(a[4], q[6])\n",
+    "qc.cx(a[4], q[5])\n",
+    "qc.cx(a[4], q[3])\n",
+    "qc.cx(a[4], q[1])\n",
     "\n",
-    "qc.cx(q[10], q[6])\n",
-    "qc.cx(q[10], q[5])\n",
-    "qc.cx(q[10], q[4])\n",
-    "qc.cx(q[10], q[0])\n",
+    "qc.cx(a[3], q[6])\n",
+    "qc.cx(a[3], q[5])\n",
+    "qc.cx(a[3], q[4])\n",
+    "qc.cx(a[3], q[0])\n",
     "\n",
     "\n",
-    "qc.cz(q[9], q[6])\n",
-    "qc.cz(q[9], q[4])\n",
-    "qc.cz(q[9], q[3])\n",
-    "qc.cz(q[9], q[2])\n",
+    "qc.cz(a[2], q[6])\n",
+    "qc.cz(a[2], q[4])\n",
+    "qc.cz(a[2], q[3])\n",
+    "qc.cz(a[2], q[2])\n",
     "\n",
-    "qc.cz(q[8], q[6])\n",
-    "qc.cz(q[8], q[5])\n",
-    "qc.cz(q[8], q[3])\n",
-    "qc.cz(q[8], q[1])\n",
+    "qc.cz(a[1], q[6])\n",
+    "qc.cz(a[1], q[5])\n",
+    "qc.cz(a[1], q[3])\n",
+    "qc.cz(a[1], q[1])\n",
     "\n",
-    "qc.cz(q[7], q[6])\n",
-    "qc.cz(q[7], q[5])\n",
-    "qc.cz(q[7], q[4])\n",
-    "qc.cz(q[7], q[0])\n",
+    "qc.cz(a[0], q[6])\n",
+    "qc.cz(a[0], q[5])\n",
+    "qc.cz(a[0], q[4])\n",
+    "qc.cz(a[0], q[0])\n",
     "\n",
     " \n",
-    "for i in range(7,13):\n",
-    "    qc.h(q[i])\n",
+    "for i in range(0,6):\n",
+    "    qc.h(a[i])\n",
     "\n",
     "# qc.draw(output='mpl', reverse_bits=True)\n",
     "\n",
-    "qc.measure([7,8,9,10,11,12], [5,4,3,2,1,0])\n",
-    "# c[5,4,3,2,1,0] -> a,b,c,d,e,f\n",
+    "qc.measure([a[5],a[4],a[3],a[2],a[1],a[0]], [0, 1, 2, 3, 4, 5])\n",
+    "# a b c d e f\n",
     "job = execute(qc,Aer.get_backend('qasm_simulator'),shots=1000)\n",
     "counts = job.result().get_counts(qc)\n",
     "print(counts)\n",
